--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ a{
  margin-bottom: 20px;
  text-align: center;
  color: #f8f8f8;
- background: url(images/bg.jpg) no-repeat center;
+ background: url(bg.jpg) no-repeat center;
  background-size: cover; 
  width:100%;
 }
